test on current tag

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   api:
-    image: fossapps/micro.appregistration
+    image: fossapps/micro.appregistration:$TAG
     ports:
       - 5000:5000
     environment:
