--- a/Micro.AppRegistration.Api/Micro.AppRegistration.Api.csproj
+++ b/Micro.AppRegistration.Api/Micro.AppRegistration.Api.csproj
@@ -17,6 +17,10 @@
       <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0-rc2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Repository" />
+    </ItemGroup>
+
     <Target Name="Install githooks" BeforeTargets="Build">
         <Exec Command="cp ../hooks/* ../.git/hooks/" />
     </Target>
