chore(ci): create 3 databases on start

--- a/Micro.AppRegistration.Api/appsettings.json
+++ b/Micro.AppRegistration.Api/appsettings.json
@@ -13,9 +13,9 @@
   "DatabaseConfig": {
     "Host": "localhost",
     "Port": 15433,
-    "Name": "starter_db",
-    "User": "starter",
-    "Password": "secret"
+    "Name": "app_registration",
+    "User": "postgres",
+    "Password": "postgres"
   },
   "MetricsOptions": {
     "InfluxDb": {
