--- a/Micro.AppRegistration.Api/Micro.AppRegistration.Api.csproj
+++ b/Micro.AppRegistration.Api/Micro.AppRegistration.Api.csproj
@@ -9,6 +9,7 @@
       <PackageReference Include="App.Metrics.AspNetCore.Mvc" Version="3.2.0-dev0002" />
       <PackageReference Include="App.Metrics.Extensions.Configuration" Version="3.2.0-dev0002" />
       <PackageReference Include="App.Metrics.Reporting.InfluxDB" Version="3.2.0-dev0002" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.0.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.0.0-preview8.19405.11" />
       <PackageReference Include="Microsoft.Extensions.Logging.Slack" Version="1.1.0" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.0.0-preview8" />
