chore(auth): integrate auth service

--- a/Micro.AppRegistration.Api/appsettings.json
+++ b/Micro.AppRegistration.Api/appsettings.json
@@ -23,5 +23,10 @@
       "Database": "monitoring"
     }
   },
+  "Services": {
+    "KeyStore": {
+      "Url": "http://localhost:15000"
+    }
+  },
   "AllowedHosts": "*"
 }
