--- a/Micro.AppRegistration.Api/appsettings.json
+++ b/Micro.AppRegistration.Api/appsettings.json
@@ -12,7 +12,7 @@
   },
   "DatabaseConfig": {
     "Host": "localhost",
-    "Port": 15433,
+    "Port": 15432,
     "Name": "app_registration",
     "User": "postgres",
     "Password": "postgres"
@@ -21,6 +21,11 @@
     "InfluxDb": {
       "BaseUri": "http://localhost:8086",
       "Database": "monitoring"
+    }
+  },
+  "Services": {
+    "KeyStore": {
+      "Url": "http://localhost:15000"
     }
   },
   "AllowedHosts": "*"
