--- a/Micro.AppRegistration.Api/Micro.AppRegistration.Api.csproj
+++ b/Micro.AppRegistration.Api/Micro.AppRegistration.Api.csproj
@@ -5,30 +5,37 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="App.Metrics" Version="4.2.0" />
-      <PackageReference Include="App.Metrics.AspNetCore.Mvc" Version="4.2.0" />
-      <PackageReference Include="App.Metrics.Extensions.Configuration" Version="4.2.0" />
-      <PackageReference Include="App.Metrics.Reporting.InfluxDB" Version="4.2.0" />
-      <PackageReference Include="Fossapps.Micro.KeyStore" Version="1.10.0" />
-      <PackageReference Include="Micro.Auth.Sdk" Version="2.1.0" />
-      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.6" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.6">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
-      <PackageReference Include="Microsoft.Extensions.Logging.Slack" Version="1.1.0" />
-      <None Include="./appsettings.ci.json" CopyToPublishDirectory="Always" />
-      <PackageReference Include="PemUtils" Version="3.0.0.82" />
-      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
+        <PackageReference Include="App.Metrics" Version="4.2.0" />
+        <PackageReference Include="App.Metrics.AspNetCore.Mvc" Version="4.2.0" />
+        <PackageReference Include="App.Metrics.Extensions.Configuration" Version="4.2.0" />
+        <PackageReference Include="App.Metrics.Reporting.InfluxDB" Version="4.2.0" />
+        <PackageReference Include="Fossapps.Micro.KeyStore" Version="1.10.0" />
+        <PackageReference Include="Micro.Auth.Sdk" Version="2.1.0" />
+        <PackageReference Include="Micro.GraphQL.Federation" Version="1.1.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.6" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.6">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.Extensions.Logging.Slack" Version="1.1.0" />
+        <None Include="./appsettings.ci.json" CopyToPublishDirectory="Always" />
+        <PackageReference Include="PemUtils" Version="3.0.0.82" />
+        <PackageReference Include="GraphQL" Version="4.5.0" />
+        <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="5.0.2" />
+        <PackageReference Include="GraphQL.Server.Transports.AspNetCore.SystemTextJson" Version="5.0.2" />
+        <PackageReference Include="GraphQL.Server.Ui.GraphiQL" Version="5.0.2" />
+        <PackageReference Include="GraphQL.SystemTextJson" Version="4.5.0" />
+        <PackageReference Include="GraphQL.DataLoader" Version="4.5.0" />
+        <PackageReference Include="GraphQL.Server.Ui.Playground" Version="5.0.2" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Micro.AppRegistration.Business\Micro.AppRegistration.Business.csproj" />
-      <ProjectReference Include="..\Micro.AppRegistration.Storage\Micro.AppRegistration.Storage.csproj" />
+        <ProjectReference Include="..\Micro.AppRegistration.Business\Micro.AppRegistration.Business.csproj" />
+        <ProjectReference Include="..\Micro.AppRegistration.Storage\Micro.AppRegistration.Storage.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Internal" />
+        <Folder Include="Internal" />
     </ItemGroup>
 
     <Target Name="Install githooks" BeforeTargets="Build">
