--- a/Micro.AppRegistration.UnitTest/Micro.AppRegistration.UnitTest.csproj
+++ b/Micro.AppRegistration.UnitTest/Micro.AppRegistration.UnitTest.csproj
@@ -7,9 +7,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Moq" Version="4.16.1" />
         <PackageReference Include="nunit" Version="3.13.2" />
         <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Micro.AppRegistration.Business\Micro.AppRegistration.Business.csproj" />
     </ItemGroup>
 
 </Project>
